jump bug, hamburger,

--- a/themes/bbb-theme/assets/scss/layout/_header.scss
+++ b/themes/bbb-theme/assets/scss/layout/_header.scss
@@ -682,10 +682,15 @@
 }
 
 canvas {
+  @include media('≤tablet') {
+    display: none;
+  }
 }
 
 #smoke-background {
   display: none;
+  
 }
 
 
+	
